# portfolio-chat-be

./: .env.example  Dockerfile  pyproject.toml
src/: main.py
src/api/endpoints/: chat.py  resume.py
src/db/: base.py
src/models/: chat_models.py  openai_response.py
src/services/: ai_service.py  chat_service.py  constant_prompt.py  system_prompt.py  telegram_bot.py
